load("@bazel_skylib//rules:common_settings.bzl", "int_flag", "string_flag")
load("@rules_tsickle//rules:defs.bzl", "closure_ts_compile")
load(
    "@stackb_rules_closure//closure:defs.bzl",
    "closure_css_binary",
    "closure_css_library",
    "closure_js_binary",
    "closure_js_library",
    "closure_js_template_library",
    "closure_js_test",
)
load("//rules:css_purge.bzl", "css_purge")
load("//rules:deploy.bzl", "cloudflare_deploy")
load("//rules:ghpages.bzl", "ghpages_deploy")
load("//rules:octicons_closure_template_compile.bzl", "octicons_closure_template_compile")
load("//rules:prerender.bzl", "prerender_home", "prerender_pages")
load("//rules:release.bzl", "release_archive")
load("//rules:ui_version.bzl", "ui_version_js")

string_flag(
    name = "release_type",
    build_setting_default = "debug",
    values = [
        "dummy",  # points to //data/dummy:modules - when submodule may not be initialized but still want to build //app/bcr:release
        "debug",
        "production",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "docs_release",
    build_setting_default = "on",
    values = [
        "off",
        "on",
    ],
    visibility = ["//visibility:public"],
)

# Whether to prerender every module's "latest version" page into the release
# tarball. Production deploys default to "on" so search engines and direct
# loads hit fully-rendered HTML. Override to "off" while iterating on the
# SPA (main.js, soy templates) — this skips the ~10-15 minute prerender_pages
# step but still runs the (~30s) home-page prerender. The home page is gated
# only by release_type=production.
string_flag(
    name = "prerender_modules",
    build_setting_default = "on",
    values = [
        "off",
        "on",
    ],
    visibility = ["//visibility:public"],
)

# Prerender tab-pool sizing. Defaults are tuned for the local dev box
# (16GB RAM / 10 CPU on Apple Silicon, where pool_size>8 OOMs mid-batch).
# CI runners with more headroom (e.g. 96GB / 32 CPU) should set higher
# values via `--config=ci` in .bazelrc — see the build:ci block there.
int_flag(
    name = "prerender_pool_size",
    build_setting_default = 8,
    visibility = ["//visibility:public"],
)

int_flag(
    name = "prerender_tab_max_pages",
    build_setting_default = 27,
    visibility = ["//visibility:public"],
)

int_flag(
    name = "prerender_warmup_concurrency",
    build_setting_default = 4,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "is_docs_release",
    flag_values = {
        ":docs_release": "on",
    },
)

# Active when both production release AND module prerender are on.
# Used to gate the prerendered_pages_tar input on :release.
config_setting(
    name = "should_prerender_modules",
    flag_values = {
        ":release_type": "production",
        ":prerender_modules": "on",
    },
)

config_setting(
    name = "is_debug_release",
    flag_values = {
        ":release_type": "debug",
    },
)

config_setting(
    name = "is_dummy_release",
    flag_values = {
        ":release_type": "dummy",
    },
)

config_setting(
    name = "is_production_release",
    flag_values = {
        ":release_type": "production",
    },
)

# NOTE: closure-templates seems to have issues compiling generated .soy files
# (or the import path becomes confusing). This rule builds the .soy generated
# file, and is also a runnable rule that copies it back into the source tree.
# Regenerate as needed.
#
# ProTip: bazel run //app/bcr:octicons
octicons_closure_template_compile(
    name = "octicons",
)

closure_css_library(
    name = "style_closure_css",
    srcs = ["style.closure.css"],
)

closure_css_binary(
    name = "css",
    debug = select({
        ":is_debug_release": True,
        "//conditions:default": False,
    }),
    renaming = True,
    visibility = ["//visibility:public"],
    deps = [":style_closure_css"],
)

closure_js_template_library(
    name = "soy",
    srcs = [
        "app.soy",
        "maintainers.soy",
        "octicons.soy",
        "packages.soy",
        "registry.soy",
        "settings.soy",
        "targets.soy",
        "treeview.soy",
        "uri.soy",
    ],
    deps = [
        "//build/stack/bazel/help/v1:bhpb_js",
        "//build/stack/bazel/registry/v1:bzpb_js",
        "//build/stack/bazel/symbol/v1:sympb_js",
        "//build/stack/starlark/v1beta1:v1beta1_js",
        "//stardoc_output:stardoc_output_js",
    ],
)

closure_ts_compile(
    name = "shiki",
    srcs = ["shiki.d.ts"],
)

closure_js_library(
    name = "common",
    srcs = [
        "common.js",
        "mvs.js",
    ],
    deps = [
        "//build/stack/bazel/registry/v1:bzpb_js",
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/ui/ac:autocomplete",
        "@stackb_rules_closure//closure/goog/ui/ac:cachingmatcher",
        "@stackb_rules_closure//closure/goog/ui/ac:inputhandler",
        "@stackb_rules_closure//closure/goog/ui/ac:renderer",
        "@stackb_ui_js//js/ui:core",
        "@stackb_ui_js//js/ui:keyboard",
        "@stackb_ui_js//js/ui:select",
    ],
)

closure_js_library(
    name = "autocompletematcher",
    srcs = [
        "autocompletematcher.js",
        "heap.js",
    ],
    deps = [
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/string",
    ],
)

closure_js_library(
    name = "registry",
    srcs = ["registry.js"],
    deps = [
        "//build/stack/bazel/registry/v1:bzpb_js",
        "@stackb_rules_closure//closure/goog/string",
    ],
)

closure_js_test(
    name = "registry_test",
    srcs = ["registry_test.js"],
    compilation_level = "ADVANCED",
    entry_points = ["goog:bcrfrontend.registryTest"],
    deps = [
        ":registry",
        "//build/stack/bazel/registry/v1:bzpb_js",
        "@stackb_rules_closure//closure/goog/testing:asserts",
        "@stackb_rules_closure//closure/goog/testing:jsunit",
        "@stackb_rules_closure//closure/goog/testing:testsuite",
    ],
)

closure_js_library(
    name = "starlark",
    srcs = ["starlark.js"],
    deps = [
        "//build/stack/bazel/registry/v1:bzpb_js",
        "//build/stack/bazel/symbol/v1:sympb_js",
        "//build/stack/starlark/v1beta1:v1beta1_js",
        "//stardoc_output:stardoc_output_js",
    ],
)

closure_js_test(
    name = "starlark_test",
    srcs = ["starlark_test.js"],
    compilation_level = "ADVANCED",
    entry_points = ["goog:bcrfrontend.starlarkTest"],
    deps = [
        ":starlark",
        "//build/stack/bazel/registry/v1:bzpb_js",
        "//build/stack/bazel/symbol/v1:sympb_js",
        "//build/stack/starlark/v1beta1:v1beta1_js",
        "//stardoc_output:stardoc_output_js",
        "@stackb_rules_closure//closure/goog/testing:asserts",
        "@stackb_rules_closure//closure/goog/testing:jsunit",
        "@stackb_rules_closure//closure/goog/testing:testsuite",
    ],
)

ui_version_js(
    name = "ui_version_src",
    template = "ui_version.js.tpl",
)

closure_js_library(
    name = "ui_version",
    srcs = [":ui_version_src"],
)

closure_js_library(
    name = "app",
    srcs = [
        "app.js",
        "bazel.js",
        "bazel_flags.js",
        "body.js",
        "clipboard.js",
        "contentcomponent.js",
        "contentselect.js",
        "documentation.js",
        "format.js",
        "githubsourcefile.js",
        "home.js",
        "language.js",
        "main.js",
        "maintainers.js",
        "markdown.js",
        "modules.js",
        "mvs_tree.js",
        "packages.js",
        "presubmit.js",
        "search.js",
        "selectnav.js",
        "settings.js",
        "source_archive_files.js",
        "syntax.js",
        "targets.js",
        "treeview.js",
        "unified_search.js",
        ":shiki",
    ],
    deps = [
        ":autocompletematcher",
        ":common",
        ":registry",
        ":soy",
        ":starlark",
        ":ui_version",
        "//build/stack/bazel/help/v1:bhpb_js",
        "//build/stack/bazel/registry/v1:bzpb_js",
        "//build/stack/bazel/symbol/v1:sympb_js",
        "//build/stack/starlark/v1beta1:v1beta1_js",
        "//stardoc_output:stardoc_output_js",
        "@stackb_rules_closure//closure/goog/array",
        "@stackb_rules_closure//closure/goog/asserts",
        "@stackb_rules_closure//closure/goog/crypt:base64",
        "@stackb_rules_closure//closure/goog/date",
        "@stackb_rules_closure//closure/goog/date:relative",
        "@stackb_rules_closure//closure/goog/dom",
        "@stackb_rules_closure//closure/goog/dom:classlist",
        "@stackb_rules_closure//closure/goog/dom:dataset",
        "@stackb_rules_closure//closure/goog/events",
        "@stackb_rules_closure//closure/goog/events:eventtype",
        "@stackb_rules_closure//closure/goog/events:listenable",
        "@stackb_rules_closure//closure/goog/soy",
        "@stackb_rules_closure//closure/goog/string",
        "@stackb_rules_closure//closure/goog/string:path",
        "@stackb_rules_closure//closure/goog/structs:treenode",
        "@stackb_rules_closure//closure/goog/structs:trie",
        "@stackb_rules_closure//closure/goog/style",
        "@stackb_rules_closure//closure/goog/ui:component",
        "@stackb_rules_closure//closure/goog/ui/ac:autocomplete",
        "@stackb_rules_closure//closure/goog/ui/ac:renderer",
        "@stackb_rules_closure//closure/goog/ui/tree:treecontrol",
        "@stackb_rules_closure//closure/goog/ui/tree:treenode",
        "@stackb_rules_closure//closure/protobuf:jspb",
        "@stackb_rules_closure//google3/third_party/javascript/safevalues",
        "@stackb_rules_closure//google3/third_party/javascript/safevalues/dom/elements",
        "@stackb_ui_js//js/ui:core",
        "@stackb_ui_js//js/ui:select",
    ],
)

closure_js_binary(
    name = "bcr",
    compilation_level = "ADVANCED",  # "SIMPLE",
    css = ":css",
    debug = select({
        ":is_debug_release": True,
        "//conditions:default": False,
    }),
    entry_points = ["goog:bcr.main"],
    language = "ECMASCRIPT_2021",
    output_wrapper = "(function(){%output%}).call(this);" + select({
        ":is_debug_release": "\n\n//# sourceMappingURL=bcr.js.map",
        "//conditions:default": "",
    }),
    deps = [":app"],
)

# capture specific outputs of module_registry
[
    filegroup(
        name = output_group,
        srcs = select({
            ":is_dummy_release": ["//data/dummy:modules"],
            "//conditions:default": ["//data/bazel-central-registry/modules"],
        }),
        output_group = output_group,
    )
    for output_group in [
        "colors_css",
        "sitemap_xml",
        "prerender_urls",
        "robots_txt",
        "registry_pb",
        "registrylite_pb",
        "symbols_pb",
        "packages_pb",
        "doc_results",
        "pkg_results",
        "bazel_flag_db",
    ]
]

# concatenates css into a single file
genrule(
    name = "bcr_css",
    srcs = [
        ":colors_css",  # generated language colors
        ":css",  # css renamed rules
        "style.css",  # unrenamed rules
    ],
    outs = ["bcr.css"],
    cmd = "cat $(SRCS) > $@",
)

# Tree-shaken primer.css. cmd/cssusage scans the SPA's source + compiled
# JS for class-name tokens; cmd/csspurge filters the vendor CSS to only
# rules whose selectors reference at least one used class. Reduces a
# ~1.3 MB vendor blob to a small fraction of itself. Dynamic class names
# constructed at runtime (e.g. `mt-${n}`) need to be listed in
# primer_safelist.txt — start it empty and add entries as visual
# regressions surface.
css_purge(
    name = "primer_purged_css",
    src = "primer.css",
    safelist = "primer_safelist.txt",
    scan_sources = glob([
        "*.soy",
        "*.js",
        "*.html",
    ]) + [":bcr.js"],
)

# Common attributes for both the prerendered and unprerendered release targets.
# Note: :registrylite_pb is consumed by releasecompiler via the `registry_file`
# attribute (which gzips + base64-encodes it into the .b64.js script tag and
# emits registry.pb.gz alongside). It must NOT appear here — listing it as a
# raw src would copy the uncompressed registrylite.pb into the tarball as
# dead weight.
RELEASE_SRCS = [
    "favicon.png",
    ":robots_txt",
    ":sitemap_xml",
] + select({
    ":is_debug_release": ["bcr.js.map"],
    "//conditions:default": [],
})

RELEASE_HASHED_SRCS = [
    ":bcr.css",
    ":primer_purged_css",
    ":bcr.js",
]

# Vanilla release that always uses the index.html template. Used as the input
# to :prerender_home (which serves it via releaseserver while headless Chrome
# captures a snapshot of the rendered home page).
release_archive(
    name = "release_unprerendered",
    srcs = RELEASE_SRCS,
    bazel_flag_db_file = ":bazel_flag_db",
    hashed_srcs = RELEASE_HASHED_SRCS,
    index_html = "index.html",
    module_registry_packages_file = "packages_pb",
    module_registry_symbols_file = "symbols_pb",
    modules_srcs = [
        ":doc_results",
        ":pkg_results",
    ],
    registry_file = ":registrylite_pb",
    worker_modules = ["//app/api"],
)

# Snapshot of the home page (/) rendered by hermetic chrome-headless-shell
# from rules_browsers. The output is a fully-rendered index.html — placeholder
# substitutions (e.g., {bcr.js} -> bcr.<hash>.js) have already happened in
# :release_unprerendered, so the snapshot references the same hashed assets
# that :release will ultimately ship.
prerender_home(
    name = "prerender_home",
    # tag manual so wildcard PR builds (which use release_type=dummy with no
    # registry data) don't try to prerender. Transitive deps from :release
    # still trigger the build when release_type=production.
    tags = ["manual"],
    tarball = ":release_unprerendered",
)

# prerender_urls (from module_registry) covers every module's latest-version
# page. Append /home so the dedicated home route also gets a static snapshot
# alongside / (which is rendered separately via :prerender_home and ships as
# the SPA's index.html). Each line is `<url> <comma-separated-output-paths>`,
# matching prerender_pages's input format.
genrule(
    name = "prerender_urls_with_home",
    srcs = [":prerender_urls"],
    outs = ["prerender_urls_with_home.txt"],
    cmd = "cat $(location :prerender_urls) > $@ && printf '/home home/index.html\\n' >> $@",
)

# Prerender every module's "latest version" page, e.g. /modules/rules_buf,
# plus the standalone /home route. Output is a tar containing entries at
# modules/<name>/index.html (and home/index.html) that the main :release
# target merges in verbatim. Concurrency × single-context tabs is much
# faster than one-tab-per-URL because the SPA stays loaded and only
# pushState/popstate fires per module.
prerender_pages(
    name = "prerender_pages",
    # tag manual so wildcard PR builds (release_type=dummy, empty
    # //data/dummy:modules) don't try to render zero URLs. Transitive deps
    # from :release still trigger the build when release_type=production
    # AND prerender_modules=on (see :should_prerender_modules).
    tags = ["manual"],
    tarball = ":release_unprerendered",
    url_list = ":prerender_urls_with_home",
)

# builds the release.tar.
#
# In production, the served index.html is the prerendered home page; other
# routes still SPA-bootstrap from the same file. For debug/dummy builds we
# use the template index.html unchanged (faster builds, no headless Chrome).
#
# ProTip: bazel run //app/bcr:release for development server
release_archive(
    name = "release",
    srcs = RELEASE_SRCS,
    bazel_flag_db_file = ":bazel_flag_db",
    hashed_srcs = RELEASE_HASHED_SRCS,
    index_html = select({
        ":is_production_release": ":prerender_home",
        "//conditions:default": "index.html",
    }),
    module_registry_packages_file = "packages_pb",
    module_registry_symbols_file = "symbols_pb",
    modules_srcs = [
        ":doc_results",
        ":pkg_results",
    ],
    prerendered_pages_tar = select({
        ":should_prerender_modules": ":prerender_pages",
        "//conditions:default": None,
    }),
    registry_file = ":registrylite_pb",
    worker_modules = ["//app/api"],
)

cloudflare_deploy(
    name = "deploy",
    account_id = "df53dccd72b4a61d2f8b1323256bc71c",
    project = "centrl",
    tarball = ":release",
    worker_modules = ["//app/api"],
    worker_script = "worker.mjs",
)

ghpages_deploy(
    name = "ghpages",
    tarball = ":release",
)
