load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "builtinsmerger_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/builtinsmerger",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/symbol/v1:symbol",
        "//build/stack/starlark/v1beta1",
        "//pkg/protoutil",
        "//stardoc_output",
    ],
)

go_binary(
    name = "builtinsmerger",
    embed = [":builtinsmerger_lib"],
    visibility = ["//visibility:public"],
)
