load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_java//java:java_binary.bzl", "java_binary")

go_library(
    name = "bzlcompiler_lib",
    srcs = [
        "bzlcompiler.go",
        "config.go",
        "extract.go",
        "files.go",
        "server.go",
    ],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/bzlcompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//blaze/worker",
        "//build/stack/bazel/registry/v1:registry",
        "//build/stack/bazel/symbol/v1:symbol",
        "//build/stack/starlark/v1beta1",
        "//pkg/paramsfile",
        "//pkg/protoutil",
        "//pkg/stardoc",
        "@bazel_gazelle//label",
        "@com_github_bazelbuild_buildtools//build",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bzlcompiler",
    embed = [":bzlcompiler_lib"],
    visibility = ["//visibility:public"],
)

# ProTip: grpcurl -plaintext localhost:3524 list
java_binary(
    name = "starlarkserver",
    main_class = "build.stack.devtools.build.constellate.RemoteStarlarkServer",
    runtime_deps = ["@constellate_server_jar//jar"],
)

go_test(
    name = "bzlcompiler_test",
    srcs = ["extract_test.go"],
    embed = [":bzlcompiler_lib"],
)
