load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "csspurge",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/main.rs",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:clap",
        "@crates//:lightningcss",
        "@crates//:parcel_selectors",
    ],
)
