load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cssusage_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/cssusage",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cssusage",
    embed = [":cssusage_lib"],
    visibility = ["//visibility:public"],
)
