load("@rules_go//go:def.bzl", "go_binary", "go_library")

# load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_import.bzl", "java_import")

go_library(
    name = "documentationcompiler_lib",
    srcs = ["main.go"],
    importpath = "github.com/stackb/centrl/cmd/documentationcompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/bzlmod/v1:bzlmod",
        "//pkg/protoutil",
        "//stardoc_output",
        "@bazel_gazelle//label:go_default_library",
    ],
)

go_binary(
    name = "documentationcompiler",
    embed = [":documentationcompiler_lib"],
    visibility = ["//visibility:public"],
)

java_import(
    name = "constellate_jar",
    jars = ["constellate.jar"],
)

# java_library(
#     name = "libserver",
#     deps = ["server_jar"],
# )

java_binary(
    name = "server",
    main_class = "build.stack.devtools.build.constellate.RemoteStarlarkServer",
    runtime_deps = ["constellate_jar"],
)
