load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "packagecompiler_lib",
    srcs = [
        "config.go",
        "extract.go",
        "files.go",
        "packagecompiler.go",
        "server.go",
    ],
    importpath = "github.com/bazel-contrib/bcr-frontend/cmd/packagecompiler",
    visibility = ["//visibility:private"],
    deps = [
        "//blaze/worker",
        "//build/stack/bazel/registry/v1:registry",
        "//build/stack/bazel/symbol/v1:symbol",
        "//build/stack/starlark/v1beta1",
        "//pkg/paramsfile",
        "//pkg/protoutil",
        "//pkg/stardoc",
        "@bazel_gazelle//label",
        "@com_github_bazelbuild_buildtools//build",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "packagecompiler",
    embed = [":packagecompiler_lib"],
    visibility = ["//visibility:public"],
)
