load("@build_stack_rules_proto//rules:starlark_library.bzl", "starlark_library")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "renderhtml_lib",
    srcs = ["main.go"],
    importpath = "github.com/stackb/centrl/cmd/renderhtml",
    visibility = ["//visibility:private"],
    deps = [
        "//blaze/worker",
        "//build/stack/centrl/render/v1:render",
        "//pkg/htmlrenderer",
        "//pkg/paramsfile",
        "//pkg/protoutil",
    ],
)

go_binary(
    name = "renderhtml",
    embed = [":renderhtml_lib"],
    visibility = ["//visibility:public"],
)

starlark_library(
    name = "libhtml",
    src = "html.bzl",
    visibility = ["//visibility:public"],
)
