load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bcr",
    srcs = [
        "archive_override.go",
        "attestations_fetch.go",
        "bazel.go",
        "bazel_release_cache.go",
        "bazel_version.go",
        "bcr.go",
        "config.go",
        "git_override.go",
        "github.go",
        "graph.go",
        "lifecycle.go",
        "local_path_override.go",
        "module_attestations.go",
        "module_commit.go",
        "module_dependency.go",
        "module_dependency_cycle.go",
        "module_id.go",
        "module_maintainer.go",
        "module_metadata.go",
        "module_presubmit.go",
        "module_registry.go",
        "module_source.go",
        "module_version.go",
        "mvs.go",
        "pr_author_cache.go",
        "presubmit.go",
        "proto_rule.go",
        "registry_backup.go",
        "repository.go",
        "repository_metadata.go",
        "repository_metadata_cache.go",
        "resource_status_cache.go",
        "single_version_override.go",
        "siterepo.go",
        "stardoc.go",
    ],
    importpath = "github.com/bazel-contrib/bcr-frontend/language/bcr",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "//pkg/attestationsjson",
        "//pkg/gh",
        "//pkg/git",
        "//pkg/metadatajson",
        "//pkg/modulebazel",
        "//pkg/netutil",
        "//pkg/presubmityml",
        "//pkg/protoutil",
        "//pkg/sourcejson",
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@bazel_gazelle//language",
        "@bazel_gazelle//repo",
        "@bazel_gazelle//resolve",
        "@bazel_gazelle//rule",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_dominikbraun_graph//:graph",
        "@com_github_google_go_github_v66//github",
        "@com_github_schollz_progressbar_v3//:progressbar",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "bcr_test",
    srcs = [
        "attestations_fetch_test.go",
        "registry_backup_test.go",
        "repository_test.go",
        "stardoc_test.go",
    ],
    embed = [":bcr"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "@bazel_gazelle//rule",
    ],
)
