load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "codesearch",
    srcs = ["codesearch.go"],
    importpath = "github.com/bazel-contrib/bcr-frontend/pkg/codesearch",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/livegrep/v1:livegrep",
        "//pkg/status",
        "@com_github_junkblocker_codesearch//index",
        "@com_github_junkblocker_codesearch//regexp",
        "@com_github_samthor_sre2//:sre2",
    ],
)
