load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gh",
    srcs = ["gh.go"],
    importpath = "github.com/stackb/centrl/pkg/gh",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_github_v66//github:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_golang_x_time//rate:go_default_library",
    ],
)
