load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gh",
    srcs = [
        "gh.go",
        "url.go",
    ],
    importpath = "github.com/bazel-contrib/bcr-frontend/pkg/gh",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "@com_github_google_go_github_v66//github",
        "@com_github_shurcool_githubv4//:githubv4",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "gh_test",
    srcs = ["url_test.go"],
    embed = [":gh"],
)
