load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "modulebazel",
    srcs = [
        "modulebazel.go",
        "predeclared.go",
        "starlark.go",
    ],
    importpath = "github.com/bazel-contrib/bcr-frontend/pkg/modulebazel",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "@bazel_gazelle//rule",
        "@com_github_bazelbuild_buildtools//build",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
    ],
)
