load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protoutil",
    srcs = [
        "delimited.go",
        "io.go",
    ],
    importpath = "github.com/bazel-contrib/bcr-frontend/pkg/protoutil",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "protoutil_test",
    srcs = [
        "delimited_test.go",
        "io_test.go",
    ],
    embed = [":protoutil"],
    deps = [
        "//build/stack/bazel/registry/v1:registry",
        "@org_golang_google_protobuf//proto",
    ],
)
